crates/idl-rust/tests/snapshots/snapshot_xcdr2_vectors__snapshot_v4_string_final.snap
---
source: crates/idl-rust/tests/snapshot_xcdr2_vectors.rs
assertion_line: 52
expression: "gen_default(\"@final struct Greeting { string text; };\")"
---
// SPDX-License-Identifier: Apache-2.0
// Auto-generated by `zerodds-idl-rust`. Do not edit by hand.

#![allow(clippy::too_many_lines)]
#![allow(unused_imports)]
#![allow(non_snake_case)]

use zerodds_cdr::{BufferReader, BufferWriter, CdrDecode, CdrEncode, DecodeError, EncodeError, Endianness};

/// Generated by `zerodds-idl-rust` from IDL.
#[derive(Debug, Clone, PartialEq, Default)]
pub struct Greeting {
    pub text: String,
}

impl zerodds_dcps::DdsType for Greeting {
    const TYPE_NAME: &'static str = "Greeting";
    const EXTENSIBILITY: zerodds_dcps::Extensibility = zerodds_dcps::Extensibility::Final;
    const TYPE_IDENTIFIER: zerodds_types::TypeIdentifier = zerodds_types::TypeIdentifier::EquivalenceHashComplete(zerodds_types::EquivalenceHash([0xc2, 0x01, 0xa8, 0xbe, 0x77, 0x6d, 0x62, 0x0f, 0xe2, 0x69, 0x94, 0x15, 0xa5, 0xc6]));

    fn encode(&self, out: &mut ::std::vec::Vec<u8>) -> ::core::result::Result<(), zerodds_dcps::EncodeError> {
        let mut writer = zerodds_cdr::BufferWriter::new(zerodds_cdr::Endianness::Little).xcdr2();
        <_ as zerodds_cdr::CdrEncode>::encode(&self.text, &mut writer)?;
        out.extend_from_slice(&writer.into_bytes());
        Ok(())
    }

    fn encode_be(&self, out: &mut ::std::vec::Vec<u8>) -> ::core::result::Result<(), zerodds_dcps::EncodeError> {
        let mut writer = zerodds_cdr::BufferWriter::new(zerodds_cdr::Endianness::Big).xcdr2();
        <_ as zerodds_cdr::CdrEncode>::encode(&self.text, &mut writer)?;
        out.extend_from_slice(&writer.into_bytes());
        Ok(())
    }

    fn decode(bytes: &[u8]) -> ::core::result::Result<Self, zerodds_dcps::DecodeError> {
        let mut reader = zerodds_cdr::BufferReader::new(bytes, zerodds_cdr::Endianness::Little).xcdr2();
        let text = <String as zerodds_cdr::CdrDecode>::decode(&mut reader)?;
        Ok(Self {
            text,
        })
    }

    fn decode_be(bytes: &[u8]) -> ::core::result::Result<Self, zerodds_dcps::DecodeError> {
        let mut reader = zerodds_cdr::BufferReader::new(bytes, zerodds_cdr::Endianness::Big).xcdr2();
        let text = <String as zerodds_cdr::CdrDecode>::decode(&mut reader)?;
        Ok(Self {
            text,
        })
    }

    fn encode_xcdr1(&self, out: &mut ::std::vec::Vec<u8>) -> ::core::result::Result<(), zerodds_dcps::EncodeError> {
        let mut writer = zerodds_cdr::BufferWriter::new(zerodds_cdr::Endianness::Little);
        <Self as zerodds_cdr::CdrEncode>::encode(self, &mut writer)?;
        out.extend_from_slice(&writer.into_bytes());
        Ok(())
    }

    fn decode_xcdr1(bytes: &[u8]) -> ::core::result::Result<Self, zerodds_dcps::DecodeError> {
        let mut reader = zerodds_cdr::BufferReader::new(bytes, zerodds_cdr::Endianness::Little);
        <Self as zerodds_cdr::CdrDecode>::decode(&mut reader).map_err(::core::convert::Into::into)
    }

    fn field_value(&self, path: &str) -> ::core::option::Option<zerodds_sql_filter::Value> {
        match path {
            "text" => ::core::option::Option::Some(zerodds_sql_filter::Value::String(self.text.clone())),
            _ => ::core::option::Option::None,
        }
    }
}

impl zerodds_cdr::CdrEncode for Greeting {
    fn encode(&self, writer: &mut zerodds_cdr::BufferWriter) -> ::core::result::Result<(), zerodds_cdr::EncodeError> {
        <_ as zerodds_cdr::CdrEncode>::encode(&self.text, writer)?;
        ::core::result::Result::Ok(())
    }
}

impl zerodds_cdr::CdrDecode for Greeting {
    fn decode(reader: &mut zerodds_cdr::BufferReader<'_>) -> ::core::result::Result<Self, zerodds_cdr::DecodeError> {
        let text = <String as zerodds_cdr::CdrDecode>::decode(reader)?;
        ::core::result::Result::Ok(Self {
            text,
        })
    }
}
