crates/idl-rust/tests/snapshots/snapshot_xcdr2_vectors__snapshot_v5_seq_int32_final.snap
---
source: crates/idl-rust/tests/snapshot_xcdr2_vectors.rs
expression: "gen_default(\"@final struct Bag { sequence<long> ids; };\")"
---
// SPDX-License-Identifier: Apache-2.0
// Auto-generated by `zerodds-idl-rust`. Do not edit by hand.

/// Generated by `zerodds-idl-rust` from IDL.
#[allow(non_snake_case)]
#[derive(Debug, Clone, PartialEq, Default)]
pub struct Bag {
    pub ids: Vec<i32>,
}

#[allow(clippy::too_many_lines, non_snake_case)]
impl zerodds_dcps::DdsType for Bag {
    const TYPE_NAME: &'static str = "Bag";
    const EXTENSIBILITY: zerodds_dcps::Extensibility = zerodds_dcps::Extensibility::Final;
    const TYPE_IDENTIFIER: zerodds_types::TypeIdentifier = zerodds_types::TypeIdentifier::EquivalenceHashComplete(zerodds_types::EquivalenceHash([0xff, 0x30, 0x62, 0x7b, 0x3f, 0xfa, 0x44, 0xe7, 0x4d, 0x23, 0x18, 0xee, 0xb4, 0x14]));

    fn encode(&self, out: &mut ::std::vec::Vec<u8>) -> ::core::result::Result<(), zerodds_dcps::EncodeError> {
        let mut writer = zerodds_cdr::BufferWriter::new(zerodds_cdr::Endianness::Little).xcdr2();
        <_ as zerodds_cdr::CdrEncode>::encode(&self.ids, &mut writer)?;
        out.extend_from_slice(&writer.into_bytes());
        Ok(())
    }

    fn encode_be(&self, out: &mut ::std::vec::Vec<u8>) -> ::core::result::Result<(), zerodds_dcps::EncodeError> {
        let mut writer = zerodds_cdr::BufferWriter::new(zerodds_cdr::Endianness::Big).xcdr2();
        <_ as zerodds_cdr::CdrEncode>::encode(&self.ids, &mut writer)?;
        out.extend_from_slice(&writer.into_bytes());
        Ok(())
    }

    fn decode(bytes: &[u8]) -> ::core::result::Result<Self, zerodds_dcps::DecodeError> {
        let mut reader = zerodds_cdr::BufferReader::new(bytes, zerodds_cdr::Endianness::Little).xcdr2();
        let ids = <Vec<i32> as zerodds_cdr::CdrDecode>::decode(&mut reader)?;
        Ok(Self {
            ids,
        })
    }

    fn decode_be(bytes: &[u8]) -> ::core::result::Result<Self, zerodds_dcps::DecodeError> {
        let mut reader = zerodds_cdr::BufferReader::new(bytes, zerodds_cdr::Endianness::Big).xcdr2();
        let ids = <Vec<i32> as zerodds_cdr::CdrDecode>::decode(&mut reader)?;
        Ok(Self {
            ids,
        })
    }

    fn encode_xcdr1(&self, out: &mut ::std::vec::Vec<u8>) -> ::core::result::Result<(), zerodds_dcps::EncodeError> {
        let mut writer = zerodds_cdr::BufferWriter::new(zerodds_cdr::Endianness::Little);
        <Self as zerodds_cdr::CdrEncode>::encode(self, &mut writer)?;
        out.extend_from_slice(&writer.into_bytes());
        Ok(())
    }

    fn decode_xcdr1(bytes: &[u8]) -> ::core::result::Result<Self, zerodds_dcps::DecodeError> {
        let mut reader = zerodds_cdr::BufferReader::new(bytes, zerodds_cdr::Endianness::Little);
        <Self as zerodds_cdr::CdrDecode>::decode(&mut reader).map_err(::core::convert::Into::into)
    }

    fn field_value(&self, path: &str) -> ::core::option::Option<zerodds_dcps::FilterValue> {
        match path {
            _ => ::core::option::Option::None,
        }
    }
}

#[allow(clippy::too_many_lines, non_snake_case)]
impl zerodds_cdr::CdrEncode for Bag {
    fn encode(&self, writer: &mut zerodds_cdr::BufferWriter) -> ::core::result::Result<(), zerodds_cdr::EncodeError> {
        <_ as zerodds_cdr::CdrEncode>::encode(&self.ids, writer)?;
        ::core::result::Result::Ok(())
    }
}

#[allow(clippy::too_many_lines, non_snake_case)]
impl zerodds_cdr::CdrDecode for Bag {
    fn decode(reader: &mut zerodds_cdr::BufferReader<'_>) -> ::core::result::Result<Self, zerodds_cdr::DecodeError> {
        let ids = <Vec<i32> as zerodds_cdr::CdrDecode>::decode(reader)?;
        ::core::result::Result::Ok(Self {
            ids,
        })
    }
}
