crates/idl-rust/tests/snapshots/snapshot_xcdr2_vectors__snapshot_v6_seq_string_final.snap
---
source: crates/idl-rust/tests/snapshot_xcdr2_vectors.rs
expression: "gen_default(\"@final struct Tags { sequence<string> tags; };\")"
---
// SPDX-License-Identifier: Apache-2.0
// Auto-generated by `zerodds-idl-rust`. Do not edit by hand.

#![allow(clippy::too_many_lines)]
#![allow(unused_imports)]

use zerodds_cdr::{BufferReader, BufferWriter, CdrDecode, CdrEncode, DecodeError, EncodeError, Endianness};

/// Generated by `zerodds-idl-rust` from IDL.
#[derive(Debug, Clone, PartialEq, Default)]
pub struct Tags {
    pub tags: Vec<String>,
}

impl zerodds_dcps::DdsType for Tags {
    const TYPE_NAME: &'static str = "Tags";
    const EXTENSIBILITY: zerodds_dcps::Extensibility = zerodds_dcps::Extensibility::Final;
    const TYPE_IDENTIFIER: zerodds_types::TypeIdentifier = zerodds_types::TypeIdentifier::None;

    fn encode(&self, out: &mut ::std::vec::Vec<u8>) -> ::core::result::Result<(), zerodds_dcps::EncodeError> {
        let mut writer = zerodds_cdr::BufferWriter::new(zerodds_cdr::Endianness::Little).xcdr2();
        <_ as zerodds_cdr::CdrEncode>::encode(&self.tags, &mut writer)?;
        out.extend_from_slice(&writer.into_bytes());
        Ok(())
    }

    fn decode(bytes: &[u8]) -> ::core::result::Result<Self, zerodds_dcps::DecodeError> {
        let mut reader = zerodds_cdr::BufferReader::new(bytes, zerodds_cdr::Endianness::Little).xcdr2();
        let tags = <Vec<String> as zerodds_cdr::CdrDecode>::decode(&mut reader)?;
        Ok(Self {
            tags,
        })
    }

    fn field_value(&self, path: &str) -> ::core::option::Option<zerodds_sql_filter::Value> {
        match path {
            _ => ::core::option::Option::None,
        }
    }
}

impl zerodds_cdr::CdrEncode for Tags {
    fn encode(&self, writer: &mut zerodds_cdr::BufferWriter) -> ::core::result::Result<(), zerodds_cdr::EncodeError> {
        <_ as zerodds_cdr::CdrEncode>::encode(&self.tags, writer)?;
        ::core::result::Result::Ok(())
    }
}

impl zerodds_cdr::CdrDecode for Tags {
    fn decode(reader: &mut zerodds_cdr::BufferReader<'_>) -> ::core::result::Result<Self, zerodds_cdr::DecodeError> {
        let tags = <Vec<String> as zerodds_cdr::CdrDecode>::decode(reader)?;
        ::core::result::Result::Ok(Self {
            tags,
        })
    }
}
