crates/idl-rust/tests/snapshots/snapshot_xcdr2_vectors__snapshot_v7_nested_modules_final.snap
---
source: crates/idl-rust/tests/snapshot_xcdr2_vectors.rs
expression: "gen_default(\"module Outer { module Inner { @final struct S { long x; }; }; };\")"
---
// SPDX-License-Identifier: Apache-2.0
// Auto-generated by `zerodds-idl-rust`. Do not edit by hand.

#![allow(clippy::too_many_lines)]
#![allow(unused_imports)]
#![allow(non_snake_case)]

use zerodds_cdr::{BufferReader, BufferWriter, CdrDecode, CdrEncode, DecodeError, EncodeError, Endianness};

pub mod Outer {
    use zerodds_cdr::{BufferReader, BufferWriter, CdrDecode, CdrEncode, DecodeError, EncodeError, Endianness};

    pub mod Inner {
        use zerodds_cdr::{BufferReader, BufferWriter, CdrDecode, CdrEncode, DecodeError, EncodeError, Endianness};

        /// Generated by `zerodds-idl-rust` from IDL.
        #[derive(Debug, Clone, PartialEq, Default)]
        pub struct S {
            pub x: i32,
        }

        impl zerodds_dcps::DdsType for S {
            const TYPE_NAME: &'static str = "Outer::Inner::S";
            const EXTENSIBILITY: zerodds_dcps::Extensibility = zerodds_dcps::Extensibility::Final;
            const TYPE_IDENTIFIER: zerodds_types::TypeIdentifier = zerodds_types::TypeIdentifier::EquivalenceHashComplete(zerodds_types::EquivalenceHash([0x2d, 0xb5, 0x8f, 0xd2, 0x7b, 0xcd, 0x55, 0x72, 0x3a, 0xff, 0x3f, 0x31, 0x3a, 0xd9]));

            fn encode(&self, out: &mut ::std::vec::Vec<u8>) -> ::core::result::Result<(), zerodds_dcps::EncodeError> {
                let mut writer = zerodds_cdr::BufferWriter::new(zerodds_cdr::Endianness::Little).xcdr2();
                <_ as zerodds_cdr::CdrEncode>::encode(&self.x, &mut writer)?;
                out.extend_from_slice(&writer.into_bytes());
                Ok(())
            }

            fn encode_be(&self, out: &mut ::std::vec::Vec<u8>) -> ::core::result::Result<(), zerodds_dcps::EncodeError> {
                let mut writer = zerodds_cdr::BufferWriter::new(zerodds_cdr::Endianness::Big).xcdr2();
                <_ as zerodds_cdr::CdrEncode>::encode(&self.x, &mut writer)?;
                out.extend_from_slice(&writer.into_bytes());
                Ok(())
            }

            fn decode(bytes: &[u8]) -> ::core::result::Result<Self, zerodds_dcps::DecodeError> {
                let mut reader = zerodds_cdr::BufferReader::new(bytes, zerodds_cdr::Endianness::Little).xcdr2();
                let x = <i32 as zerodds_cdr::CdrDecode>::decode(&mut reader)?;
                Ok(Self {
                    x,
                })
            }

            fn decode_be(bytes: &[u8]) -> ::core::result::Result<Self, zerodds_dcps::DecodeError> {
                let mut reader = zerodds_cdr::BufferReader::new(bytes, zerodds_cdr::Endianness::Big).xcdr2();
                let x = <i32 as zerodds_cdr::CdrDecode>::decode(&mut reader)?;
                Ok(Self {
                    x,
                })
            }

            fn encode_xcdr1(&self, out: &mut ::std::vec::Vec<u8>) -> ::core::result::Result<(), zerodds_dcps::EncodeError> {
                let mut writer = zerodds_cdr::BufferWriter::new(zerodds_cdr::Endianness::Little);
                <Self as zerodds_cdr::CdrEncode>::encode(self, &mut writer)?;
                out.extend_from_slice(&writer.into_bytes());
                Ok(())
            }

            fn decode_xcdr1(bytes: &[u8]) -> ::core::result::Result<Self, zerodds_dcps::DecodeError> {
                let mut reader = zerodds_cdr::BufferReader::new(bytes, zerodds_cdr::Endianness::Little);
                <Self as zerodds_cdr::CdrDecode>::decode(&mut reader).map_err(::core::convert::Into::into)
            }

            fn field_value(&self, path: &str) -> ::core::option::Option<zerodds_dcps::FilterValue> {
                match path {
                    "x" => ::core::option::Option::Some(zerodds_dcps::FilterValue::Int(self.x as i64)),
                    _ => ::core::option::Option::None,
                }
            }
        }

        impl zerodds_cdr::CdrEncode for S {
            fn encode(&self, writer: &mut zerodds_cdr::BufferWriter) -> ::core::result::Result<(), zerodds_cdr::EncodeError> {
                <_ as zerodds_cdr::CdrEncode>::encode(&self.x, writer)?;
                ::core::result::Result::Ok(())
            }
        }

        impl zerodds_cdr::CdrDecode for S {
            fn decode(reader: &mut zerodds_cdr::BufferReader<'_>) -> ::core::result::Result<Self, zerodds_cdr::DecodeError> {
                let x = <i32 as zerodds_cdr::CdrDecode>::decode(reader)?;
                ::core::result::Result::Ok(Self {
                    x,
                })
            }
        }

    }

}
