crates/idl-rust/tests/snapshots/snapshot_xcdr2_vectors__snapshot_v8_keyed_final.snap
---
source: crates/idl-rust/tests/snapshot_xcdr2_vectors.rs
expression: "gen_default(\"@final struct Sensor { @key long id; double value; };\")"
---
// SPDX-License-Identifier: Apache-2.0
// Auto-generated by `zerodds-idl-rust`. Do not edit by hand.

#![allow(clippy::too_many_lines)]
#![allow(unused_imports)]

use zerodds_cdr::{BufferReader, BufferWriter, CdrDecode, CdrEncode, DecodeError, EncodeError, Endianness};

/// Generated by `zerodds-idl-rust` from IDL.
#[derive(Debug, Clone, PartialEq, Default)]
pub struct Sensor {
    pub id: i32,
    pub value: f64,
}

impl zerodds_dcps::DdsType for Sensor {
    const TYPE_NAME: &'static str = "Sensor";
    const EXTENSIBILITY: zerodds_dcps::Extensibility = zerodds_dcps::Extensibility::Final;
    const HAS_KEY: bool = true;
    const KEY_HOLDER_MAX_SIZE: ::core::option::Option<usize> = ::core::option::Option::Some(4);
    const TYPE_IDENTIFIER: zerodds_types::TypeIdentifier = zerodds_types::TypeIdentifier::EquivalenceHashComplete(zerodds_types::EquivalenceHash([0xf9, 0x5c, 0x75, 0x9a, 0x81, 0x43, 0xca, 0xbe, 0x0d, 0x49, 0x7c, 0xb4, 0xe0, 0x11]));

    fn encode(&self, out: &mut ::std::vec::Vec<u8>) -> ::core::result::Result<(), zerodds_dcps::EncodeError> {
        let mut writer = zerodds_cdr::BufferWriter::new(zerodds_cdr::Endianness::Little).xcdr2();
        <_ as zerodds_cdr::CdrEncode>::encode(&self.id, &mut writer)?;
        <_ as zerodds_cdr::CdrEncode>::encode(&self.value, &mut writer)?;
        out.extend_from_slice(&writer.into_bytes());
        Ok(())
    }

    fn decode(bytes: &[u8]) -> ::core::result::Result<Self, zerodds_dcps::DecodeError> {
        let mut reader = zerodds_cdr::BufferReader::new(bytes, zerodds_cdr::Endianness::Little).xcdr2();
        let id = <i32 as zerodds_cdr::CdrDecode>::decode(&mut reader)?;
        let value = <f64 as zerodds_cdr::CdrDecode>::decode(&mut reader)?;
        Ok(Self {
            id,
            value,
        })
    }

    fn encode_key_holder_be(&self, holder: &mut zerodds_cdr::PlainCdr2BeKeyHolder) {
        holder.write_i32(self.id);
    }

    fn field_value(&self, path: &str) -> ::core::option::Option<zerodds_sql_filter::Value> {
        match path {
            "id" => ::core::option::Option::Some(zerodds_sql_filter::Value::Int(self.id as i64)),
            "value" => ::core::option::Option::Some(zerodds_sql_filter::Value::Float(self.value)),
            _ => ::core::option::Option::None,
        }
    }
}

impl zerodds_cdr::CdrEncode for Sensor {
    fn encode(&self, writer: &mut zerodds_cdr::BufferWriter) -> ::core::result::Result<(), zerodds_cdr::EncodeError> {
        <_ as zerodds_cdr::CdrEncode>::encode(&self.id, writer)?;
        <_ as zerodds_cdr::CdrEncode>::encode(&self.value, writer)?;
        ::core::result::Result::Ok(())
    }
}

impl zerodds_cdr::CdrDecode for Sensor {
    fn decode(reader: &mut zerodds_cdr::BufferReader<'_>) -> ::core::result::Result<Self, zerodds_cdr::DecodeError> {
        let id = <i32 as zerodds_cdr::CdrDecode>::decode(reader)?;
        let value = <f64 as zerodds_cdr::CdrDecode>::decode(reader)?;
        ::core::result::Result::Ok(Self {
            id,
            value,
        })
    }
}
